# homeservicerobot

./: .gitignore  ISAAC_SIM_SETUP.md  README.md  demo.sh  save_map.sh
docs/: isaac_sim_migration.md  isaac_sim_migration_tasks.md
src/: frames_2026-02-28_15.32.18.gv
src/home_robot_bringup/: CMakeLists.txt  package.xml
src/home_robot_bringup/launch/: full_pipeline.launch.py  isaac_pipeline.launch.py
src/home_robot_navigation/: CMakeLists.txt  package.xml
src/home_robot_navigation/config/: nav2_params.yaml  waypoints.yaml
src/home_robot_navigation/launch/: navigation.launch.py
src/home_world/: CMakeLists.txt  home_world_isaac.py  home_world_simple.py  package.xml  ros2_bridge_config.yaml
src/home_world/launch/: home_world.launch.py
src/home_world/worlds/: home.world
src/object_test_bag/: metadata.yaml  object_test_bag_0.db3
src/pymoveit2/pymoveit2/: moveit2.py
src/task_coordinator/: package.xml  setup.cfg  setup.py
src/task_coordinator/config/: arm_poses.yaml
src/task_coordinator/task_coordinator/: __init__.py  analyze_hsv.py  bring_food_client.py  debug_image.py  food_detector.py  pose_recorder.py  task_coordinator_node.py
